--- a/app/views/dradis/plugins/csv_export/export/_index-content.html.erb
+++ b/app/views/dradis/plugins/csv_export/export/_index-content.html.erb
@@ -1,7 +1,7 @@
-<%= content_tag :div, id: 'plugin-csv', class: 'tab-pane fade' do %>
+<%= content_tag :div, id: 'plugin-csv_export', class: 'tab-pane fade' do %>
 
   <%= form_tag project_export_manager_path(current_project), target: '_blank' do %>
-    <%= hidden_field_tag :plugin, :csv %>
+    <%= hidden_field_tag :plugin, :csv_export %>
     <%= hidden_field_tag :route, :root %>
 
     <h4 class="header-underline mb-0">Ready when you are!</h4>
