--- a/app/views/dradis/plugins/csv_export/export/_index-content.html.erb
+++ b/app/views/dradis/plugins/csv_export/export/_index-content.html.erb
@@ -11,7 +11,7 @@
         <span class="sr-only">Toggle Dropdown</span>
       </button>
       <div class="dropdown-menu">
-        <%= collection_radio_buttons(:csv, :state, [['published', 'published'], ['all', 'all']], :first, :first) do |b| %>
+        <%= collection_radio_buttons(:csv_export, :scope, [['published', 'published'], ['all', 'all']], :first, :first) do |b| %>
           <span>
             <%= b.label class: 'state' do %>
               <%= b.radio_button class: 'd-none', data: { behavior: 'state-radio'}, checked: b.value == 'published' %>
