--- a/app/views/dradis/plugins/csv_export/export/_index-tabs.html.erb
+++ b/app/views/dradis/plugins/csv_export/export/_index-tabs.html.erb
@@ -1,3 +1,3 @@
 <li class='nav-item'>
-  <a href='#plugin-csv_export' class='nav-link' data-bs-toggle='tab'>CSV</a>
+  <a href='#plugin-csv_export' class='nav-link' data-bs-toggle='tab'><i class="fa-solid fa-file-csv fa-fw"></i>CSV</a>
 </li>
