--- a/app/views/dradis/plugins/csv_export/export/_index-content.html.erb
+++ b/app/views/dradis/plugins/csv_export/export/_index-content.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, id: 'plugin-csv_export', class: 'tab-pane fade' do %>
-  <%= form_tag csv_export.project_export_path(current_project) do %>
+  <%= form_tag csv_export.project_report_path(current_project) do %>
     <h4 class="header-underline mb-0">Ready when you are!</h4>
     <div class="mt-4">
       <%= render partial: 'export/submit_button', locals: { plugin_name: Dradis::Plugins::CSVExport::Engine.plugin_name } %>
